Refactored logic to initialize SceytChatUIKit. Started creating logic to set app theme.

--- a/SceytChatUiKit/src/main/res/values-night/colors.xml
+++ b/SceytChatUiKit/src/main/res/values-night/colors.xml
@@ -5,6 +5,22 @@
     <color name="sceyt_color_accent">#6B72FF</color>
     <color name="sceyt_color_status_bar">#19191B</color>
 
+
+    <color name="sceyt_color_surface_1">#232324</color>
+    <color name="sceyt_color_surface_2"></color>
+    <color name="sceyt_color_surface_3"></color>
+
+
+    <color name="sceyt_color_overlay_background">#000000</color>
+    <color name="sceyt_color_overlay_background_2">#111539</color>
+    <color name="sceyt_color_border">#F1F2F6</color>
+    <color name="sceyt_color_icon_secondary">#707388</color>
+    <color name="sceyt_color_icon_inactive">#C6C7D0</color>
+    <color name="sceyt_color_text_primary">#111539</color>
+    <color name="sceyt_color_text_secondary">#707388</color>
+    <color name="sceyt_color_text_footnote">#A0A1B0</color>
+
+
     <color name="sceyt_color_button">#303032</color>
     <color name="sceyt_color_text_themed">#E1E3E6</color>
     <color name="sceyt_color_divider">#303032</color>
