--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -4,20 +4,48 @@
 
     //Themed colors
     <color name="sceyt_color_primary_dark">#FFFFFF</color>
+    <color name="sceyt_color_status_bar">#33000000</color>
     <color name="sceyt_color_primary">#FFFFFF</color>
     <color name="sceyt_color_accent">#5159F6</color>
-    <color name="sceyt_color_status_bar">#33000000</color>
+
+    <!--Surface-->
+    <color name="sceyt_color_surface_1">#F1F2F6</color>
+    <color name="sceyt_color_surface_2">#E4E6EE</color>
+    <color name="sceyt_color_surface_3">#A0A1B0</color>
+
+    <!--Interface-->
+    <color name="sceyt_color_bg">#FFFFFF</color>
+    <color name="sceyt_color_border">#E4E6EE</color>
+    <color name="sceyt_color_icon_secondary">#A0A1B0</color>
+    <color name="sceyt_color_icon_inactive">#C6C7D0</color>
+    <color name="sceyt_color_overlay_background">#80000000</color>
+    <color name="sceyt_color_overlay_background_2">#66111539</color>
+
+    <!--Text-->
+    <color name="sceyt_color_text_primary">#111539</color>
+    <color name="sceyt_color_text_secondary">#707388</color>
+    <color name="sceyt_color_text_footnote">#A0A1B0</color>
+    <color name="sceyt_color_text_on_primary">#FFFFFF</color>
+
+    <!--State-->
+    <color name="sceyt_color_error">#FA4C56</color>
+    <color name="sceyt_color_success">#24C383</color>
+    <color name="sceyt_color_warning">#FBB019</color>
+
+
+
+    <color name="sceyt_color_bg_secondary_themed">#F4F5F8</color>
 
     <color name="sceyt_color_button">#F1F2F6</color>
     <color name="sceyt_color_text_themed">#111539</color>
+    <color name="sceyt_color_gray_secondary_themed">#707388</color>
+    <color name="sceyt_color_text_footnote_themed">#A0A1B0</color>
     <color name="sceyt_color_divider">#F1F2F6</color>
     <color name="sceyt_color_black_themed">#FF000000</color>
     <color name="sceyt_color_gray_themed">#F1F2F6</color>
-    <color name="sceyt_color_gray_secondary_themed">#707388</color>
     <color name="sceyt_color_dark_blue_themed">#66111539</color>
 
-    <color name="sceyt_color_bg">#FFFFFF</color>
-    <color name="sceyt_color_bg_secondary_themed">#F4F5F8</color>
+
 
     <color name="sceyt_color_bg_out_message">#E3E7FF</color>
     <color name="sceyt_color_bg_inc_message">#F1F2F6</color>
@@ -31,9 +59,10 @@
     <color name="sceyt_color_black">#000000</color>
     <color name="sceyt_color_white">#FFFFFFFF</color>
     <color name="sceyt_color_hint">#9B9DA8</color>
-    <color name="sceyt_color_green">#4BB34B</color>
     <color name="sceyt_color_dark_blue">#66111539</color>
-    <color name="sceyt_color_red">#F23F51</color>
+    <color name="sceyt_color_green">#24C383</color>
+    <color name="sceyt_color_red">#FA4C56</color>
+    <color name="sceyt_color_yellow">#FBB019</color>
     <color name="sceyt_color_gray">#F1F2F6</color>
     <color name="sceyt_color_gray_200">#DDDFE5</color>
     <color name="sceyt_color_gray_400">#7C7E8E</color>
