--- a/SceytChatUiKit/src/main/res/layout/sceyt_activity_media.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_activity_media.xml
@@ -33,7 +33,7 @@
             android:layout_marginStart="12dp"
             android:background="?selectableItemBackgroundBorderless"
             android:padding="4dp"
-            android:tint="@color/sceyt_color_white"
+            android:tint="@color/sceyt_color_on_primary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
@@ -49,7 +49,7 @@
             android:ellipsize="middle"
             android:fontFamily="@font/roboto_medium"
             android:singleLine="true"
-            android:textColor="@color/sceyt_color_white"
+            android:textColor="@color/sceyt_color_on_primary"
             android:textSize="16sp"
             app:layout_constrainedWidth="true"
             app:layout_constraintBottom_toTopOf="@+id/tvDate"
@@ -86,7 +86,7 @@
             android:layout_marginEnd="10dp"
             android:background="?selectableItemBackgroundBorderless"
             android:padding="4dp"
-            android:tint="@color/sceyt_color_white"
+            android:tint="@color/sceyt_color_on_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
