--- a/SceytChatUiKit/src/main/res/layout/sceyt_galery_media_picker.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_galery_media_picker.xml
@@ -48,8 +48,8 @@
             android:backgroundTint="@color/sceyt_color_accent"
             android:elevation="2dp"
             android:padding="16dp"
-            android:tint="@color/sceyt_color_white"
-            app:iconTint="@color/sceyt_color_white"
+            android:tint="@color/sceyt_color_on_primary"
+            app:iconTint="@color/sceyt_color_on_primary"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +68,7 @@
             android:paddingHorizontal="6dp"
             android:paddingVertical="2dp"
             android:singleLine="true"
-            android:textColor="@color/sceyt_color_white"
+            android:textColor="@color/sceyt_color_on_primary"
             android:textSize="@dimen/extraSmallTextSize"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="@+id/btnNext"
