--- a/SceytChatUiKit/src/main/res/layout/scroll_to_bottom_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/scroll_to_bottom_view.xml
@@ -41,7 +41,7 @@
         android:paddingHorizontal="6dp"
         android:paddingVertical="2dp"
         android:singleLine="true"
-        android:textColor="@color/sceyt_color_white"
+        android:textColor="@color/sceyt_color_on_primary"
         android:textSize="@dimen/extraSmallTextSize"
         android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
