--- a/SceytChatUiKit/src/main/res/drawable/sceyt_bg_gallery_counter.xml
+++ b/SceytChatUiKit/src/main/res/drawable/sceyt_bg_gallery_counter.xml
@@ -6,5 +6,5 @@
     <corners android:radius="30dp"/>
     <stroke
         android:width="2dp"
-        android:color="@color/sceyt_color_white" />
+        android:color="@color/sceyt_color_on_primary" />
 </shape>
