--- a/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_fragment_edit_channel.xml
@@ -151,7 +151,7 @@
         android:layout_margin="16dp"
         android:clickable="false"
         android:src="@drawable/sceyt_ic_save"
-        android:tint="@color/sceyt_color_white"
+        android:tint="@color/sceyt_color_on_primary"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
