--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_channel_video.xml
@@ -34,7 +34,7 @@
         android:includeFontPadding="false"
         android:paddingHorizontal="7dp"
         android:paddingVertical="2dp"
-        android:textColor="@color/sceyt_color_white"
+        android:textColor="@color/sceyt_color_on_primary"
         android:textSize="11sp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
