--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_video.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_gallery_video.xml
@@ -51,7 +51,7 @@
             android:includeFontPadding="false"
             android:paddingHorizontal="7dp"
             android:paddingVertical="2dp"
-            android:textColor="@color/sceyt_color_white"
+            android:textColor="@color/sceyt_color_on_primary"
             android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
