--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_message_date_separator.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_message_date_separator.xml
@@ -14,7 +14,7 @@
         android:includeFontPadding="false"
         android:paddingHorizontal="12dp"
         android:paddingVertical="3dp"
-        android:textColor="@color/sceyt_color_white"
+        android:textColor="@color/sceyt_color_on_primary"
         android:textSize="@dimen/extraSmallTextSize"
         tools:text="Feb 24" />
 
