--- a/SceytChatUiKit/src/main/res/layout/sceyt_item_out_voice_message.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_item_out_voice_message.xml
@@ -102,7 +102,7 @@
             app:layout_constraintStart_toStartOf="@+id/playPauseButton"
             app:layout_constraintTop_toTopOf="@+id/playPauseButton"
             app:minProgress="2"
-            app:progressColor="@color/sceyt_color_white"
+            app:progressColor="@color/sceyt_color_on_primary"
             app:trackColor="@android:color/transparent"
             tools:visibility="visible" />
 
