--- a/SceytChatUiKit/src/main/res/layout/sceyt_media_item_image.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_media_item_image.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintWidth_percent=".16"
         app:minProgress="2"
-        app:progressColor="@color/sceyt_color_white"
+        app:progressColor="@color/sceyt_color_on_primary"
         app:rotateAnimEnabled="false"
         app:trackColor="@android:color/transparent"
         tools:visibility="visible" />
