--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_video_item.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_video_item.xml
@@ -62,7 +62,7 @@
         android:includeFontPadding="false"
         android:paddingHorizontal="7dp"
         android:paddingVertical="2dp"
-        android:textColor="@color/sceyt_color_white"
+        android:textColor="@color/sceyt_color_on_primary"
         android:textSize="11sp"
         android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +83,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:minProgress="2"
-        app:progressColor="@color/sceyt_color_white"
+        app:progressColor="@color/sceyt_color_on_primary"
         app:trackColor="@android:color/transparent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
