--- a/SceytChatUiKit/src/main/res/layout/sceyt_record_view.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_record_view.xml
@@ -211,7 +211,7 @@
             android:layout_height="35dp"
             android:background="@drawable/sceyt_bg_circle"
             android:padding="7dp"
-            android:tint="@color/sceyt_color_white"
+            android:tint="@color/sceyt_color_on_primary"
             app:srcCompat="@drawable/sceyt_ic_voice" />
 
     </androidx.cardview.widget.CardView>
