--- a/SceytChatUiKit/src/main/res/values/colors.xml
+++ b/SceytChatUiKit/src/main/res/values/colors.xml
@@ -53,7 +53,7 @@
 
     // Not themed colors
     <color name="sceyt_color_black">#000000</color>
-    <color name="sceyt_color_white">#FFFFFFFF</color>
+    <color name="sceyt_color_on_primary">#FFFFFFFF</color>
     <color name="sceyt_color_hint">#9B9DA8</color>
     <color name="sceyt_color_dark_blue">#66111539</color>
     <color name="sceyt_color_green">#24C383</color>
