--- a/examples/SceytDemoApp/src/main/res/layout/activity_login.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/activity_login.xml
@@ -128,7 +128,7 @@
                     android:background="@drawable/sceyt_bg_corners_6"
                     android:enabled="@{enableConnect &amp; !loading}"
                     android:text="@{loading ? null: @string/connect, default = @string/connect}"
-                    android:textColor="@color/sceyt_color_white"
+                    android:textColor="@color/sceyt_color_on_primary"
                     android:textSize="@dimen/smallTextSize"
                     app:layout_constraintTop_toBottomOf="@+id/displayNameTextField" />
 
