--- a/examples/SceytDemoApp/src/main/res/layout/custom_fragment_channel_media.xml
+++ b/examples/SceytDemoApp/src/main/res/layout/custom_fragment_channel_media.xml
@@ -15,7 +15,7 @@
         android:paddingHorizontal="2dp"
         android:paddingTop="15dp"
         android:text="Custom media fragment"
-        android:textColor="@color/sceyt_color_white"
+        android:textColor="@color/sceyt_color_on_primary"
         android:textSize="20dp"
         app:spanCount="3"
         tools:itemCount="9"
