--- a/SceytChatUiKit/src/main/res/layout/sceyt_message_link_preview_container.xml
+++ b/SceytChatUiKit/src/main/res/layout/sceyt_message_link_preview_container.xml
@@ -68,13 +68,13 @@
         android:layout_marginTop="4dp"
         android:ellipsize="end"
         android:maxLines="3"
-        android:textColor="@color/sceyt_color_gray_secondary"
+        android:textColor="@color/sceyt_color_text_secondary"
         android:textSize="@dimen/smallTextSize"
         app:layout_constrainedWidth="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvLinkTitle"
-        tools:text="Link preview info descriptiondescriptiond " />
+        tools:text="Link preview info description" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
